2008-11-07   <> 

	* src/AnsiSqlProvider.cs: Fixed function check.

2008-11-07   <> 

	* src/Query.cs: Fixed return type.

2008-11-07   <> 

	* src/AnsiSqlProvider.cs: Check for ( and ) when checking for function calls
	  in CreateSelectStatement().
	
	  Fixed spacing in front of WHERE in CreateDeleteStatement().
	* src/DatabaseManager.cs: Added DateTime hack for SqlClient (MSSQL) to WHERE
	  parameter passing, as DateTime could be party of the primary key.
	* src/Query.cs: Implemented GetFirst(template, selectColumns) overload.

2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* src/MySqlProvider.cs: Fixed creating table using the InnoDB engine.

2008-06-22   <> 

	* src/DatabaseManager.cs: CreateUpdateCommand(): added workaround for bug in
	  Mono's Microsoft SQL client.

2008-06-22   <> 

	* src/Query.cs: GetAll(): don't emulate an offset of 0.
	
	  Add(), GetAll(), RemoveAll(): log parsed SQL query with parameter
	  values.
	
	  ParseCommandParameters(): replace all command parameter variables with
	  their actual values.

2008-05-29   <> 

	* src/Query.cs: Implemented emulation of LIMIT and OFFSET support.

2008-05-23   <> 

	* src/AnsiSqlProvider.cs: Fixed compile error with gmcs >= 1.9.1
	* src/MicrosoftSqlProvider.cs: MSSQL wants BIT instead of BOOLEAN as data
	  type.
	
	  Fixed LIMIT support.

2008-02-11  Mirco Bauer <meebey@meebey.net> 

	* src/Query.cs: Fixed OrderBy check.

2008-02-11  Mirco Bauer <meebey@meebey.net> 

	* src/ColumnAttribute.cs, src/DatabaseManager.cs: Implemented NOT NULL
	  support.
	* src/Query.cs: Added profiling code.
